--- a/Views/Game/ViewImages.cshtml
+++ b/Views/Game/ViewImages.cshtml
@@ -11,16 +11,16 @@
 <div id="content">
 	<p>
 
-		<a id="example1" href="/Games/example/Air_Wave.png">
-            <img alt="example1" src="/Games/example/Air_Wave.png" />
+		<a id="example1" href="/SampleImg/Air_Wave.png">
+            <img alt="example1" src="/SampleImg/Air_Wave.png" />
 
 		</a>
 
-		<a id="example2" href="/Games/example/30_Days_Honey.png"><img alt="example2" src="/Games/example/30_Days_Honey.png" /></a>
+		<a id="example2" href="/SampleImg/30_Days_Honey.png"><img alt="example2" src="/SampleImg/30_Days_Honey.png" /></a>
 
-		<a id="example3" href="/Games/example/Battle_Buggy.png"><img alt="example3" src="/Games/example/Battle_Buggy.png" /></a>
+		<a id="example3" href="/SampleImg/Battle_Buggy.png"><img alt="example3" src="/SampleImg/Battle_Buggy.png" /></a>
 		
-		<a id="example4" href="/Games/example/Back_Yards_Buzzing.png"><img class="last" alt="example4" src="/Games/example/Back_Yards_Buzzing.png" /></a>
+		<a id="example4" href="/SampleImg/Back_Yards_Buzzing.png"><img class="last" alt="example4" src="/SampleImg/Back_Yards_Buzzing.png" /></a>
 	
         </p>
 	</div>
